--- a/src/EmptyWebApp1/wwwroot/index.html
+++ b/src/EmptyWebApp1/wwwroot/index.html
@@ -3,15 +3,25 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>Bootstrap Layouts</title>
+    <link href="/lib/bootstrap/css/bootstrap.css" rel="stylesheet" />
 </head>
 <body>
     <p id="para1">Hello from the Index page</p>
+
+    <div class="row" style="color: red">
+        <div class="col-sm-6" style="background: #999">test1</div>
+        <div class="col-sm-4" style="background: #666">test2</div>
+        <div class="col-sm-2" style="background: #333">test3</div>
+    </div>
+
     <script type="text/javascript" src="/lib/jquery/js/jquery.js"></script>
-    <script>
-        $(function() {
-            $("#para1").css({color : 'red'});
+    <script type="text/javascript" src="/lib/bootstrap/js/bootstrap.js"></script>
+    <script type="text/javascript">
+        $(function () {
+            $("#para1").css({ color: 'red' });
         });
     </script>
+
 </body>
 </html>
